Pre-release - in progress
    - Refactored qpp::internal::Singleton ["internal/classes/singleton.hpp"]
      so that qpp::internal::Singleton::get_instance() returns a thread local
      instance whenever the compiler supports thread_local. For more
      fine-grained control, one can use
          qpp::internal::Singleton::get_no_thread_local_instance()
          qpp::internal::Singleton::get_thread_local_instance()
    - Added qpp::schmidt() ["entanglement.hpp"] and improved the performance
      of singular value decomposition, thanks @antoine-bussy
      (https://github.com/antoine-bussy)

Version 2.7 - 1 August 2021
    - Added installation support and auto package detection via CMake
      find_package(qpp REQUIRED)
    - Simplified installation instructions ["INSTALL.md"]
    - Added an almost complete BB84 example ["examples/bb84.cpp"], does not
      include error correction and privacy amplification
    - Added CircleCI continuous integration
    - CMake minimum required version bumped to 3.12 for automatic unit tests
      detection by CMake and other CMake-related "good practices"
    - Unit testing and examples are now separate CMake targets, one needs to
      explicitly type 'make unit_testing' and/or 'make examples' to build the
      unit testing suite and/or the examples, respectively
    - Simplified unit testing, now one can run tests with 'ctest' or
      'make test' (after explicitly built with 'make unit_testing'). Use
      'GTEST_COLOR=1 ARGS="-V" make test' or 'GTEST_COLOR=1 ctest -V' for
      coloured verbose testing output.
    - Fixed minor inadvertence in OpenQASM `crz` implementation, see
      https://github.com/softwareQinc/qpp/issues/99
    - Changed the signature of qpp::cwise() ["functions.hpp"] so it takes the
      scalar argument by value (and not constant reference as before). This
      avoids an internal compiler error (ICE) triggered when compiling
      "examples/functor.cpp" in MinGW.