@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.12)
 project(qpp VERSION 2.6 LANGUAGES CXX)
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 enable_testing()
 
-#### Disable spurious Eigen warnings if using C++17 with MSVC (warning STL4007)
+#### Disable spurious Eigen warnings with MSVC (warning STL4007)
 if (MSVC)
     add_compile_definitions(_SILENCE_CXX17_ADAPTOR_TYPEDEFS_DEPRECATION_WARNING)
 endif ()
