@@ -1,6 +1,6 @@
 If you are interested in contributing to this project, feel free to contact us. Alternatively, fork the repository,
 create a custom branch, add your contribution, then finally create a pull request. If we accept the pull request, we
 will merge your custom branch with the latest main/development branch. The latter will eventually be merged into a
-future release version. To contribute, it is preferably to have a solid knowledge of modern C++ (preferably C++11 or
+future release version. To contribute, it is preferably to have a solid knowledge of modern C++ (preferably C++17 or
 later), including templates and the standard library, a basic knowledge of quantum computing and linear algebra, and
 working experience with [Eigen 3](http://eigen.tuxfamily.org).
