@@ -12,7 +12,7 @@
 ## About
 
 Quantum++ is a modern C++ general purpose quantum computing library, composed solely of template header files. Quantum++
-is written in standard C++11 and has very low external dependencies, using only
+is written in standard C++17 and has very low external dependencies, using only
 the [Eigen 3](http://eigen.tuxfamily.org) linear algebra header-only template library and, if available,
 the [OpenMP](http://openmp.org/) multi-processing library.
 
@@ -28,7 +28,7 @@ To report any bugs or ask for additional features/enhancements, please
 If you are interesting in contributing to this project, feel free to contact us. Alternatively, fork the repository,
 create a custom branch, add your contribution, then finally create a pull request. If we accept the pull request, we
 will merge your custom branch with the latest main/development branch. The latter will eventually be merged into a
-future release version. To contribute, you need to have a solid knowledge of C++ (preferably C++11 or later), including
+future release version. To contribute, you need to have a solid knowledge of C++ (preferably C++17 or later), including
 templates and the standard library, a basic knowledge of quantum computing and linear algebra, and working experience
 with [Eigen 3](http://eigen.tuxfamily.org).
 
